--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ should have a prior knowledge of git and version control, in the process we deci
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>My Portfolio</title>
+  <title>Priyabrat Mishra</title>
 
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -53,11 +53,11 @@ should have a prior knowledge of git and version control, in the process we deci
     <section class="resume-section" id="about">
       <div class="resume-section-content">
         <h1 class="mb-0 text-center">
-          <span class="text-primary">Hitik</span>
-          saini
+          <span class="text-primary">Priyabrat</span>
+          Mishra
         </h1>
         <div class="subheading mb-5 text-center">
-          Address, email, phone
+          Sundgauallee 28, 08-03-1, Freiburg im Breisgau, 79110, Germany priyabrat.misra@gmail.com, +49 173 8911 287 / + 91 833 9833 696
           <a href="mailto:priyabrat.misra@gmail.com">priyabrat.misra@gmail.com</a>
         </div>
         <img class="top-img " src="sources/my_website1.svg" alt="">
@@ -267,7 +267,7 @@ should have a prior knowledge of git and version control, in the process we deci
     <section class="">
       <hr>
       <div class="">
-        <p>Made by <a href="https://hitik20.tech/">Hitik</a>, <a href="https://mozillachandigarh.tech/">Mozilla Chandigarh</a> </p>
+        <p>Made by <a href="https://hitik20.tech/"></a>, <a href="https://mozillachandigarh.tech/">Mozilla Chandigarh</a> </p>
       </div>
     </section>
   </div>
