--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@ should have a prior knowledge of git and version control, in the process we deci
           Mishra
         </h1>
         <div class="subheading mb-5 text-center">
-          Sundgauallee 28, 08-03-1, Freiburg im Breisgau, 79110, Germany priyabrat.misra@gmail.com, +49 173 8911 287 / + 91 833 9833 696
+          Sundgauallee 28, 08-03-1, 
+          Freiburg im Breisgau, 79110, Germany
+          +49 173 8911 287 / + 91 833 9833 696
           <a href="mailto:priyabrat.misra@gmail.com">priyabrat.misra@gmail.com</a>
         </div>
         <img class="top-img " src="sources/my_website1.svg" alt="">
