--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ should have a prior knowledge of git and version control, in the process we deci
           Mishra
         </h1>
         <div class="subheading mb-5 text-center">
-          Sundgauallee 28, 08-03-1, 
-          Freiburg im Breisgau, 79110, Germany
+          Sundgauallee 28, 08-03-1, <br/>
+          Freiburg im Breisgau, 79110, Germany<br/>
           +49 173 8911 287 / + 91 833 9833 696
           <a href="mailto:priyabrat.misra@gmail.com">priyabrat.misra@gmail.com</a>
         </div>
