--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ should have a prior knowledge of git and version control, in the process we deci
           +49 173 8911 287 / + 91 833 9833 696 <br/>
           <a href="mailto:priyabrat.misra@gmail.com">priyabrat.misra@gmail.com</a>
         </div>
-        <img class="top-img " src="sources/my_website1.svg" alt="">
+        <!--<img class="top-img " src="sources/my_website1.svg" alt="">-->
         <p class="lead mb-5">
           
           Priyabrat Mishra is currently pursuing his Master of Science in Embedded Systems at the University of Freiburg located at Freiburg im Breisgau, Germany. With having associated in developing firmwares for embedded projects and working on robotics with the help of C, C++ and Python respectively, he aspires to be a professional in the domain of Robotics and Machine Learning.
