--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ should have a prior knowledge of git and version control, in the process we deci
 
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+  <script src="http://www.w3schools.com/lib/w3data.js"></script>
 
   <!-- Google fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
