--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ should have a prior knowledge of git and version control, in the process we deci
           a 15.9155 15.9155 0 0 1 0 -31.831"
       />
       <path class="circle"
-        stroke-dasharray="50, 100"   <!-- 50 percent -->
+        stroke-dasharray="50, 100"   
         d="M18 2.0845
           a 15.9155 15.9155 0 0 1 0 31.831
           a 15.9155 15.9155 0 0 1 0 -31.831"
@@ -228,7 +228,7 @@ should have a prior knowledge of git and version control, in the process we deci
           a 15.9155 15.9155 0 0 1 0 -31.831"
       />
       <path class="circle"
-        stroke-dasharray="35, 100"    <!-- 35 percent -->
+        stroke-dasharray="35, 100"    
         d="M18 2.0845
           a 15.9155 15.9155 0 0 1 0 31.831
           a 15.9155 15.9155 0 0 1 0 -31.831"
@@ -251,7 +251,7 @@ should have a prior knowledge of git and version control, in the process we deci
           a 15.9155 15.9155 0 0 1 0 -31.831"
       />
       <path class="circle"
-        stroke-dasharray="80, 100"     <!-- 80 percent -- >
+        stroke-dasharray="80, 100"     
         d="M18 2.0845
           a 15.9155 15.9155 0 0 1 0 31.831
           a 15.9155 15.9155 0 0 1 0 -31.831"
@@ -270,7 +270,7 @@ should have a prior knowledge of git and version control, in the process we deci
           a 15.9155 15.9155 0 0 1 0 -31.831"
       />
       <path class="circle"
-        stroke-dasharray="75, 100"   <!-- 75 percent -->
+        stroke-dasharray="75, 100"   
         d="M18 2.0845
           a 15.9155 15.9155 0 0 1 0 31.831
           a 15.9155 15.9155 0 0 1 0 -31.831"
