--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ should have a prior knowledge of git and version control, in the process we deci
    
 </div>
 
-<div class="subheading mb-3">Programming Languages & Tools</div>
+<div class="subheading mb-3">Hardware skills</div>
 
 <div class="flex-wrapper">
   <div class="single-chart">
@@ -261,7 +261,6 @@ should have a prior knowledge of git and version control, in the process we deci
     </svg>
   </div>
   
-  <div class="flex-wrapper">
   <div class="single-chart">
     <svg viewbox="0 0 36 36" class="circular-chart pink">
       <path class="circle-bg"
@@ -275,10 +274,12 @@ should have a prior knowledge of git and version control, in the process we deci
           a 15.9155 15.9155 0 0 1 0 31.831
           a 15.9155 15.9155 0 0 1 0 -31.831"
       />
-      <text x="18" y="20.35" class="percentage">Sensors & Actuators</text>
+      <text x="18" y="20.35" class="percentage">Sensors</text>
       <text x="18" y="25" class="skillsName">Very Good</text>
     </svg>
   </div>
+  
+  </div> 
   
   <!--
   <div class="single-chart">
@@ -299,7 +300,7 @@ should have a prior knowledge of git and version control, in the process we deci
     </svg>
   </div> -->
   
-  </div> 
+  
         
         
        <!--
