--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ should have a prior knowledge of git and version control, in the process we deci
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+       <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li> -->
       </ul>
     </div>
   </nav>
@@ -421,7 +421,7 @@ should have a prior knowledge of git and version control, in the process we deci
         </div>
       </div>
     </section>
-      
+   <!--   
     <hr class="m-0" />
     <!-- Awards-->
     <section class="resume-section" id="awards">
@@ -452,7 +452,7 @@ should have a prior knowledge of git and version control, in the process we deci
         </div>
       </div>
     </section>
-
+-->
     <!-- my new tab -->
 
 
